2005-07-11 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
        * ea_store.c and ea_restore.c functions clean up
        * extraced restore_class_parent and restore_class_methods from
          restore_class_entry to share code with loader.c
        * extracted opcode handling in encode/decode_op_array into 
          encode/decode_op to make code more readable
        * make decode_class_entry use new functions in ea_restore.c
        * readded line-number encoding
        * bumped up encoder version to 4 until new loader is in place

2005-07-10 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Renamed some macros from MMC (mmcache) to EA (eg MMCG is now EAG)
        * Added eA file header to mm.c, mm.h and x86-spinlocks.h
        * Readded a hack to the loader to prevent zend2 segfaults

2005-07-09 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * A compile fix for php4 (bug #1235017)
        * Removed atexit code that only produced segfaults and didn't work
          (Patch from Rob Foehl <rwf at loonybin.net>)
        * Code clean up and compile fixes for VC.net + VC.net project files update
          (Based on patch #1234919)
        * Future check warning was done on uninitialised buf.
        * Some code clean ups and updated VS6 project files.

2005-07-07 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Added get_zend_destroy_property_info function to ea_restore.h
        * Code refactoring needed for the new encoder. Moved all store/calc
          functions to ea_store.c and all restore/fixup functions to ea_restore.c

2005-07-06 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * A compile fix for zend engine 1.
        * Documented namespace option
        * New debug/log code. Make the code a lot cleaner and easier
          for the user to debug eaccelerator.

2005-06-27 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed a buffer overflow in eaccelerator.c and cache.c. A string longer